# gsmlib

./: .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  bootstrap.sh  configure  configure.ac  configure.in  gsm_config.h.in  gsmlib.spec
apps/: Makefile.am  Makefile.in  gsmctl.cc  gsmpb.cc  gsmsendsms.cc  gsmsmsd.cc  gsmsmsstore.cc
contrib/: Makefile.am  Makefile.in  README  gsm-utils.default  gsm-utils.init  gsmsmsq  gsmsmsrequeue  gsmsmsspool
debian/: changelog  control  copyright  gsmsiectl.1  rules
doc/: FAQ  Makefile.am  Makefile.in  gsmctl.man  gsmpb.man  gsmsendsms.man  gsmsmsd.man
ext/: Makefile.am  Makefile.in  gsm_sie_me.cc  gsm_sie_me.h  gsmsiectl.cc  gsmsiexfer.cc
gsmlib/: Makefile.am  Makefile.in  gsm_at.cc  gsm_at.h  gsm_cb.cc  gsm_cb.h  gsm_error.cc  gsm_error.h  gsm_event.cc  gsm_event.h  gsm_map_key.h  gsm_me_ta.cc  gsm_me_ta.h  gsm_nls.cc  gsm_nls.h  gsm_parser.cc  gsm_parser.h  gsm_phonebook.cc  gsm_phonebook.h  gsm_port.h  gsm_sms.cc  gsm_sms.h  gsm_sms_codec.cc  gsm_sms_codec.h  gsm_sms_store.cc  gsm_sms_store.h  gsm_sorted_phonebook.cc  gsm_sorted_phonebook.h  gsm_sorted_phonebook_base.cc  gsm_sorted_phonebook_base.h  gsm_sorted_sms_store.cc  gsm_sorted_sms_store.h  gsm_sysdep.h  gsm_unix_serial.cc  gsm_unix_serial.h  gsm_util.cc  gsm_util.h  gsm_win32_serial.cc  gsm_win32_serial.h
po/: cat-id-tbl.c  de.gmo  de.po  gsmlib.pot
scripts/: Makefile.am  Makefile.in
tests/: Makefile.am  Makefile.in  runsms.sh  runspb.sh  runspb2.sh  runssms.sh  testgsmlib.cc  testparser.cc  testpb.cc  testpb2.cc  testsms-output.txt  testsms.cc  testsms2.cc  testspb.cc  testssms-output.txt  testssms.cc
win32/: Makefile.am  Makefile.in  README.win  gsm_config.h  gsmlib.dsp  gsmlib.dsw
