## Process this file with automake to produce Makefile.in
# *************************************************************************
# * GSM TA/ME library
# *
# * File:    Makefile.am
# *
# * Purpose: Toplevel Makefile
# *
# * Author:  Peter Hofmann (software@pxh.de)
# *
# * Created: 21.5.1999
# *************************************************************************

SUBDIRS =	po gsmlib apps tests doc scripts win32 ext contrib

all:
