## Process this file with automake to produce Makefile.in
# *************************************************************************
# * GSM TA/ME library
# *
# * File:    Makefile.am
# *
# * Purpose: contrib Makefile
# *
# * Author:  Peter Hofmann (software@pxh.de)
# *
# * Created: 02.11.2003
# *************************************************************************

EXTRA_DIST = 	gsmsmsrequeue gsm-utils.cron.d gsm-utils.init README \
		gsmsmsq gsmsmsspool gsm-utils.default

