## Process this file with automake to produce Makefile.in
# *************************************************************************
# * GSM TA/ME library
# *
# * File:    Makefile.am
# *
# * Purpose: scripts Makefile
# *
# * Author:  Peter Hofmann (software@pxh.de)
# *
# * Created: 5.6.1999
# *************************************************************************

EXTRA_DIST = \
	compile \
	config.guess \
	config.rpath \
	config.sub \
	debugconfig.sh \
	depcomp \
	install-sh \
	ltmain.sh \
	missing \
	test-driver
